# VikingView

./: .gitignore  build_notes.txt
src/: CMakeLists.txt  PrefixHeader.h  ProgressReporter.h  VikingView.files  VikingView.includes  main.cc
src/Application/: ChooseStructuresDialog.cc  CommandLineArgs.cc  CommandLineArgs.h  ModelController.cc  ModelController.h  Preferences.cc  Preferences.h  PreferencesWindow.cc  PreferencesWindow.h  PreferencesWindow.ui  VikingViewApp.cc  VikingViewApp.h  VikingViewApp.ui  choosestructuresdialog.h  choosestructuresdialog.ui
src/Data/: AlphaShape.cc  AlphaShape.h  ColorMapper.cc  ColorMapper.h  Downloader.cc  Downloader.h  FixedAlphaShape.cc  FixedAlphaShape.h  Json.cc  Json.h  PointSampler.cc  PointSampler.h  Scale.h  Structure.cc  Structure.h
src/Resources/: VikingView.icns  VikingView.qrc
src/Static/: StructureColors.txt  StructureTypeColors.txt
src/Visualization/: Viewer.cc  Viewer.h  customQuadricDecimation.cc  customQuadricDecimation.h
